# scribl

./: .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: draft-pdf.yml  python-package.yml  release-drafter.yml
paper/: paper.bib  paper.md
scribl/: __init__.py  manage_graphdb.py  parse_scribl.py  process_graphdb_data.py  process_zotero.py  scribl.py
tests/: test_init.py  test_manage_graphdb.py  test_parser.py  test_process_graphdb_data.py  test_process_zotero.py  test_pyzotero_network.py
tests/test_data/: 2022_01_03_171311_zotero_data.csv  2022_01_05_155925_zotero_data.csv  zotero_errors.csv  zotero_export_1.csv  zotero_export_2.csv
