[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scribl"
description = "A system for the semantic capture of relationships in biological literature"
dynamic = ["version", "readme"]  # version generated dynamically
authors = [
    { name = "Amber Biology", email = "info@amberbiology.com" }
]
keywords = ["systems biology", "network biology", "literature database"]
license = {text = "GNU AGPLv3+"}

classifiers = [
"Programming Language :: Python :: 3",
"Intended Audience :: Science/Research",
"Topic :: Scientific/Engineering :: Bio-Informatics",
"License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

dependencies = [
    "pyparsing <= 3.1.2",
    "pandas <= 2.2.2",
    "pyzotero <= 1.5.19",
    "networkx <= 3.3",
    "matplotlib <= 3.9.0"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
scribl="scribl.scribl:main"

[project.urls]
Homepage = "http://amberbiology.com"
Source = 'https://github.com/amberbiology/scribl/'
Tracker = 'https://github.com/amberbiology/scribl/issues'

[tool.setuptools]
packages = ["scribl"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
version_file = "scribl/_version.py"
version_scheme = "post-release"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests",]
minversion = "7"
log_cli_level = "INFO"
xfail_strict = true
#filterwarnings = ["error"]
